fixed scroll margin top with workaround to have space to top and section down under from the header and not behind

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-html, body {
+html {
     scroll-behavior: smooth;
 }
 
